🐞 Fixed - [Widges] Fixed the issue of widgets displaying wrongly on mobile devices.

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1494,7 +1494,10 @@ button.dropdown-item.is-active {
     &.open {
       transform: translateX(0);
       width: calc( 100% - 2rem );
-
+      .wsettings{
+        display: flex;
+        justify-content: right;
+      }
     }
   }
 
